change instagram feed and fix arrouw on mobile

--- a/assets/sass/theme/_responsive.scss
+++ b/assets/sass/theme/_responsive.scss
@@ -127,6 +127,9 @@
 	}
 	#fbsection1 {
 		height: 100vh;
+		.arrow {
+			bottom: 100px;
+		}
 		.videoWrap {
 			background: url('assets/images/bg.jpg') no-repeat scroll center / cover;
 			video {
